fix background image stretching

--- a/public_html/css/aboutus.css
+++ b/public_html/css/aboutus.css
@@ -22,6 +22,7 @@ img.background-image {
     position: absolute;
     width: 100%;
     height: 100%;
+    object-fit: cover;
     opacity: 0.2;
     top: 0;
     left: 0;
